--- a/src/app/pages/inventarios/show/show.component.html
+++ b/src/app/pages/inventarios/show/show.component.html
@@ -57,7 +57,7 @@
                             {{ obtenerSumatoriaPiezasDisponibles(insumo?.lotes) }}
                         </td>
                         <td width="10px">
-                            <button href="#" class="btn btn-sm btn-secondary" (click)="showInsumoMedico(insumo?.id)">
+                            <button href="#" class="btn btn-sm btn-secondary" (click)="showInsumoMedico(inventario.id, insumo?.id)">
                                 <i class="fas fa-list"></i>
                             </button>
                         </td>
