--- a/src/app/pages/inventarios/index/index.component.html
+++ b/src/app/pages/inventarios/index/index.component.html
@@ -2,54 +2,26 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header text-secondary border-0">
-            <h3 class="card-title text-center">Todos los inventarios</h3>
-            <div class="card-tools">
-                <!-- <a class="btn btn-tool btn-sm">
-                <i class="fas fa-download"></i>
-                </a> -->
-            </div>
-            </div>
-            <div class="card-header border-0">
-                <div class="row">
-                    <!-- <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
-                        <div class="input-group my-2">
-                            <div class="input-group-prepend">
-                              <div class="input-group-text"><i class="fas fa-search"></i></div>
-                            </div>
-                            <input [(ngModel)]="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del inventario" (keyup)="buscarInventario()">
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
-                        <a class="btn btn-sm btn-pink btn-block  my-2" routerLink="/enfermeria/inventarios/create"><i class="fas fa-plus"></i> Nuevo inventario</a>
-                    </div> -->
-                </div>   
+                <h3 class="card-title text-center">Todos los inventarios</h3>
+                <div class="card-tools">
+                </div>
             </div>
             <div class="card-body table-responsive p-0">
                 <table class="table table-striped table-valign-middle">
-                    <thead>
-                    <tr class="text-center">
-                        <th>Nombre</th>
-                        <th>Empresa</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
+                    <thead class="text-center">
+                        <tr>
+                            <th>Nombre</th>
+                            <th></th>
+                        </tr>
                     </thead>
                     <tbody *ngIf="inventarios.length > 0; else noinventarioes">
                         <tr *ngFor="let inventario of inventarios | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
-                            <td>
+                            <td class="text-center">
                                 {{ inventario.nombre }}
-                            </td>
-                            <td>
-                                <!-- {{ inventario.nombre }} -->
                             </td>
                             <td width="10px">
                                 <button (click)="showInventario(inventario.id)" class="btn btn-sm btn-secondary">
                                     <i class="fas fa-eye"></i>
-                                </button>
-                            </td>
-                            <td width="10px">
-                                <button (click)="editInventario(inventario.id)" class="btn btn-sm btn-primary">
-                                    <i class="fas fa-edit"></i>
                                 </button>
                             </td>
                         </tr>
