--- a/src/app/pages/inventarios/show/insumos/lotes/show/show.component.html
+++ b/src/app/pages/inventarios/show/insumos/lotes/show/show.component.html
@@ -61,49 +61,42 @@
             </div>
         </div>
       </div>
-      <div class="card">
+      <!-- <div class="card">
         <div class="card-header text-secondary border-0">
           <h3 class="card-title text-center">Todos los movimientos del lote {{lote?.lote}} <span class="badge badge-info">{{lote?.movimientos?.length}}</span></h3>
-          <div class="card-tools">
-            <a href="#" class="btn btn-tool btn-sm">
-              <i class="fas fa-download"></i>
-            </a>
-          </div>
-        </div>
-        <div class="card-header border-0">
-            <div class="row">
-                <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
-
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
-                  <button type="button" class="btn btn-sm btn-pink btn-block  my-2" data-toggle="modal" data-target="#movimientoModal">
-                    <i class="fas fa-plus"></i> Agregar movimiento
-                  </button>
-                </div>
-            </div>   
         </div>
         <div class="card-body table-responsive p-0">
           <table class="table table-striped table-valign-middle">
             <thead>
             <tr class="text-center">
-                <th>Movimiento</th>
-                <th>Folio</th>
-                <th>Fecha</th>
-                <th>Profesional</th>
+              <th>
+
+              </th>
+              <th>Folio</th>
+              <th>Movimiento</th>
+              <th>Fecha</th>
+              <th>Profesional</th>
             </tr>
             </thead>
 
             <tbody *ngIf="lote?.movimientos!.length > 0; else nolotes">
-              <tr *ngFor="let movimiento of lote!.movimientos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                </tr>
+              <tr class="text-center" *ngFor="let movimiento of lote!.movimientos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
+                <td>
+                  <i class="fas "></i>
+                </td>
+                <td>
+                  {{movimiento.id}}
+                </td>    
+                <td>
+                   {{movimiento.tipo_de_movimiento.tipoDeMovimiento}}
+                </td>
+                <td>
+                  {{ movimiento.fecha | date:'dd/MM/yyyy' }}
+                </td>
+                <td>
+                  {{ movimiento.profesional.nombre }}
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -117,64 +110,6 @@
                 <td colspan="5" class="text-center">Sin movimientos</td>
             </tr>
         </ng-template>
-      </div>
-    </div>
-  </div>
-
-  <!-- MODAL GENERAR MOVIMIENTO -->
-
-  <div class="modal fade" id="movimientoModal" tabindex="-1" aria-labelledby="movimientoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="movimientoModalLabel">Agregar movimiento</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div>
-            <form [formGroup]="movimientoForm" (submit)="guardar()">
-              <div class="row">
-                <div class="form-group">
-                  <label class="col-form-label">
-                    Tipo de movimiento
-                    <span class="text-danger">*</span>
-                  </label>
-                  <ngx-select [items]="movimientoTipos" [formControlName]="'movimientoTipo'" [id]="'movimientoTipo'" name="movimientoTipo">
-                      <ng-content select="value"></ng-content>
-                  </ngx-select>
-                </div>
-                <div class="form-group col-12">
-                  <label>Piezas a descontar</label>
-                  <div class="input-group mb-3">
-                    <input type="number" class="form-control" id="piezasDescontables" formControlName="piezasDescontables" name="piezasDescontables">
-                    <div class="input-group-append">
-                      <span class="input-group-text">{{lote?.insumo?.piezasPorLote}}</span>
-                    </div>
-                  </div>
-                </div>
-                <!-- <div class="form-group col-12" *ngIf="movimientoForm.get('movimientoTipo')?.value == 3">
-                  <label>Piezas a ingresar</label>
-                  <div class="input-group mb-3">
-                    <input type="number" class="form-control" id="piezasIngresables" formControlName="piezasIngresables" name="piezasIngresables">
-                    <div class="input-group-append">
-                      <span class="input-group-text">{{lote?.insumo?.piezasPorLote}}</span>
-                    </div>
-                  </div>
-                </div> -->
-              </div>
-              <div *ngIf="mensajesDeError.length > 0" class="text-danger pb-3">
-                  <ul class="list-group">
-                      <li class="list-group-item list-group-item-danger" *ngFor="let mensaje of mensajesDeError">{{ mensaje }}</li>
-                  </ul>
-              </div>
-              <div class="text-center">
-                  <button class="btn bg-pink">Guardar</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
+      </div> -->
     </div>
   </div>
