--- a/src/app/pages/inventarios/show/show.component.html
+++ b/src/app/pages/inventarios/show/show.component.html
@@ -1,6 +1,5 @@
 <div class="content">
     <div class="container-fluid">
-        
         <div class="card">
             <div class="card-header text-secondary border-0">
               <h3 class="card-title text-center">Todos los insumos médicos de {{inventario?.nombre}}</h3>
@@ -12,7 +11,7 @@
             </div>
             <div class="card-header border-0">
                 <div class="row">
-                    <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
+                    <div class="col-xl-6 col-lg-4 col-md-4 col-sm-4">
                         <!-- <div class="input-group my-2">
                             <div class="input-group-prepend">
                               <div class="input-group-text"><i class="fas fa-search"></i></div>
@@ -21,10 +20,14 @@
                         </div> -->
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
-                        <a class="btn btn-sm btn-pink btn-block  my-2" (click)="crearInsumo(inventario.id)"><i class="fas fa-plus"></i> Agregar insumo</a>
+                        <a class="btn btn-sm btn-pink-light btn-block  my-2" (click)="generarMovimiento(inventario!.id)"><i class="fas fa-plus"></i> Generar movimiento de lotes</a>
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
+                        <a class="btn btn-sm btn-pink btn-block  my-2" (click)="crearInsumo(inventario!.id)"><i class="fas fa-plus"></i> Agregar insumo</a>
                     </div>
                 </div>   
             </div>
+            <!-- {{ inventario?.insumos | json }} -->
             <div class="card-body table-responsive p-0">
               <table class="table table-striped table-valign-middle">
                 <thead>
@@ -37,8 +40,8 @@
                     <!-- <th></th> -->
                 </tr>
                 </thead>
-                <tbody *ngIf="inventario?.insumos.length > 0; else noInsumos">
-                    <tr *ngFor="let insumo of inventario?.insumos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
+                <tbody *ngIf="inventario?.insumos!.length > 0; else noInsumos">
+                    <tr *ngFor="let insumo of inventario!.insumos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                         <td>
                             <i class="fas fa-circle" [ngClass]="{
                                 'text-success': insumo.lotes.length > 10,
@@ -54,10 +57,10 @@
                             {{ insumo?.lotes?.length || 0 }}
                         </td>
                         <td class="text-center">
-                            {{ obtenerSumatoriaPiezasDisponibles(insumo?.lotes) }}
+                            {{ obtenerSumatoriaPiezasDisponibles(insumo!.lotes) }}
                         </td>
                         <td width="10px">
-                            <button href="#" class="btn btn-sm btn-secondary" (click)="showInsumoMedico(inventario.id, insumo?.id)">
+                            <button href="#" class="btn btn-sm btn-secondary" (click)="showInsumoMedico(inventario!.id, insumo.id)">
                                 <i class="fas fa-list"></i>
                             </button>
                         </td>
